# ai-standards

./: .gitignore  AGENTS.md  README.md  README.ru.md  ai.project.toml  pyproject.toml  registry.toml
docs/: 0tdiwfc-log-typesctipt_and_versioning_support.md  0tdk9ag-java_infrastructure_rules_update.md  0tdk9ag-java_infrastructure_rules_update.ru.md  0tdk9ag-log-java_infra_rules_refactor.md  0tdkawt-log-frontend_infra_rules_refactor.md  0tdkklm-log-normalize_django-service_layer_rules.md  0tdo6uk-ChatGPT-GLM-From Vibe Coding to Agentic Engineering.md  0tdo987-log-autonomy_boundaries.md  0tdtl1j-log-arxiv.org-2603.29957.md  20260322-115807-log-intro.md  20260410-log-django-stack-import.md  20260410-log-sqlalchemy-stack.md  20260413-122753-log-completion_planing_reasoning_durable.md  agent-usage-hygiene-usage.md  agent-usage-hygiene-usage.ru.md  autonomy-boundaries-usage.md  autonomy-boundaries-usage.ru.md  reasoning-hygiene-usage.md  reasoning-hygiene-usage.ru.md  review-lenses-usage.md  review-lenses-usage.ru.md
docs/ai/: project-rules.md  project-rules.ru.md
docs/decisions/: 2026-04-15-add-release-versioning-workflow.md  2026-04-15-add-release-versioning-workflow.ru.md  2026-04-15-add-typescript-stack.md  2026-04-15-add-typescript-stack.ru.md  2026-04-16-add-nextjs-nuxt-vite-fsd-stacks.md  2026-04-16-add-nextjs-nuxt-vite-fsd-stacks.ru.md  2026-04-16-add-tanstack-query-stack.md  (+17 more)
scripts/: __init__.py  ai_sync.py  bump_version.py
templates/: grace_map.md  project_manifest.toml  project_rules.md
tests/: __init__.py  test_ai_sync.py  test_bump_version.py
(+46 files in other folders)
