[project]
name = "ai-standards"
version = "0.1.0"
description = "Centralized AGENTS.md generator for project AI standards."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3,<1.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.18.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.13.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["scripts", "tests"]

